--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "antd": "^5.21.6",
     "firebase": "^11.0.1",
+    "react-player": "^2.16.0",
     "swiper": "^11.1.14"
   }
 }
